--- a/architecture.html
+++ b/architecture.html
@@ -171,7 +171,6 @@ pre.code {
             <li>The dependency is missing; throw an informative error.</li>
         </ol>
         <p>A running application is called an "agent", which is similar to a process under other operating systems. An agent may contain several threads running in parallel, each using its own memory stack.</p>
-        <p>To preserve system resources, an agent may mark itself as collectable. The system may kill a collectable agent to free memory. A dependent agent may mark a collectable agent as a reference. The system will not kill any direct or indirect references of a non-collectable agent.</p>
         <p>Every application uses the same unified heap for dynamic memory allocation. The system transparently manages garbage collection in the heap.</p>
         <p>Heap allocation read and write operations are controlled by the permission system. If an agent tries to read or write a heap allocation without appropriate permission, the system will throw an error.</p>
         <p>Public functions may be configured to automatically grant permissions for input and output heap allocations. Automatic permission assignment is established in both bytecode application files and interface files.</p>
@@ -202,23 +201,7 @@ pre.code {
         <p>In general, permission to perform an operation on a directory denotes ability to perform the same operation on the directory's contents. For example, if an agent holds <span class="code">vItemWrtProtab</span> permission for a directory, the agent implicitly holds <span class="code">vItemWrtProtab</span> permission for all items inside the directory.</p>
         <p>In an analagous fashion, permission to configure an application file denotes ability to configure agents launched from the application file. For example, if a vessel holds permission for <span class="code">memControlProtab</span> on an application file, the vessel implicitly holds permission for <span class="code">memControlProtab</span> on any agents launched from the application file.</p>
         <p>Permission to <span class="code">permControlProtab</span> allows an agent to give and remove the permissions of another vessel. If vessel <span class="code">D1</span> holds <span class="code">permControlProtab</span> permission on vessel <span class="code">D2</span>, then vessel <span class="code">D1</span> implicitly holds all permissions held by vessel <span class="code">D2</span>.</p>
-        <p>The system establishes the following permissions to <span class="code">permControlProtab</span>:</p>
-        <ul>
-            <li>Upon launch, an agent holds explicit <span class="code">permControlProtab</span> permission on its application file.</li>
-            <li>A <span class="code">main</span> application file holds implicit <span class="code">permControlProtab</span> permission on its application version directory.</li>
-            <li>An application version directory holds implicit <span class="code">permControlProtab</span> permission on its application bundle.</li>
-        </ul>
-        <p>By default, each application bundle and application file holds implicit permission for all operations on its volume item. As a consequence, an agent holds permission for all operations on its application bundle upon launch. This relationship can be eliminated if the agent loses <span class="code">permControlProtab</span> permission on its application file.</p>
         <p><span class="code">permControlProtab</span> permission is transitive across vessels. If vessel <span class="code">E1</span> holds <span class="code">permControlProtab</span> permission on vessel <span class="code">E2</span>, and <span class="code">E2</span> holds <span class="code">permControlProtab</span> permission on vessel <span class="code">E3</span>, then <span class="code">E1</span> implicitly holds <span class="code">permControlProtab</span> permission on vessel <span class="code">E3</span>.</p>
-        <p>A permission "mirror" is a mechanism which causes one vessel to adopt the permission identity of another vessel. If vessel <span class="code">F1</span> mirrors the permissions of vessel <span class="code">F2</span>, then the following properties hold true:</p>
-        <ul>
-            <li>Vessel <span class="code">F1</span> holds all permissions held by vessel <span class="code">F2</span>.</li>
-            <li>If vessel <span class="code">F1</span> receives a permission, then vessel <span class="code">F2</span> also receives the permission.</li>
-            <li>If vessel <span class="code">F2</span> receives a permission, then vessel <span class="code">F1</span> also receives the permission.</li>
-            <li>If vessel <span class="code">F1</span> loses a permission, then vessel <span class="code">F2</span> also loses the permission.</li>
-            <li>If vessel <span class="code">F2</span> loses a permission, then vessel <span class="code">F1</span> also loses the permission.</li>
-        </ul>
-        <p>Setting up a permission mirror requires permission to <span class="code">permControlProtab</span>. If agent <span class="code">G1</span> wants to create a permission mirror from vessel <span class="code">G2</span> to vessel <span class="code">G3</span>, agent <span class="code">G1</span> must hold permission to <span class="code">permControlProtab</span> on both vessel <span class="code">G2</span> and vessel <span class="code">G3</span>.</p>
         <p class="title2">RESOURCE SYSTEM</p>
         <p>The resource system distributes hardware resources to vessels. Such hardware resources include RAM (memory usage), non-volatile storage (volume usage), and CPU utilization.</p>
         <p>Two vessels may be configured to be in a memory parent/child relationship so that the parent may constrain memory usage of the child. If vessel <span class="code">A1</span> is a memory parent of vessel <span class="code">A2</span>, then vessel <span class="code">A1</span> can set the maximum memory quota of vessel <span class="code">A2</span>.</p>
@@ -237,23 +220,10 @@ pre.code {
         </ol>
         <p>A memory parent may assign a throttle priority to each of its children. The system will try to throttle and kill memory children with the lowest throttle priority first.</p>
         <p>Establishing memory parent/child relationships requires permission to <span class="code">memControlProtab</span>. If agent <span class="code">B1</span> wants to assign vessel <span class="code">B2</span> as a memory child to vessel <span class="code">B3</span>, agent <span class="code">B1</span> must hold permission to <span class="code">memControlProtab</span> on vessel <span class="code">B3</span>, and vessel <span class="code">B3</span> must hold permission to <span class="code">memControlProtab</span> on vessel <span class="code">B2</span>.</p>
-        <p>The system creates the following memory parent/child relationships by default:</p>
-        <ul>
-            <li>An application bundle is a memory parent of its application version directories.</li>
-            <li>An application version directory is a memory parent of its <span class="code">main</span> application file.</li>
-            <li>An application file is a memory parent of its launched agents.</li>
-        </ul>
         <p><span class="code">memControlProtab</span> permission is transitive across vessels. If vessel <span class="code">C1</span> holds <span class="code">memControlProtab</span> permission on vessel <span class="code">C2</span>, and <span class="code">C2</span> holds <span class="code">memControlProtab</span> permission on vessel <span class="code">C3</span>, then <span class="code">C1</span> implicitly holds <span class="code">memControlProtab</span> permission on vessel <span class="code">C3</span>.</p>
         <p>A vessel may have multiple memory parents. In this case, the vessel's memory usage counts toward the combined memory quota of all memory parents.</p>
-        <p>A memory mirror causes one vessel to adopt the memory usage identity of another vessel. If vessel <span class="code">D1</span> mirrors the memory usage of vessel <span class="code">D2</span>, then the following properties hold true:</p>
-        <ul>
-            <li>Vessels <span class="code">D1</span> and <span class="code">D2</span> have the same memory quota.</li>
-            <li>Memory usage of both vessel <span class="code">D1</span> and <span class="code">D2</span> count toward the same memory quota.</li>
-            <li>Vessels <span class="code">D1</span> and <span class="code">D2</span> have the same memory children.</li>
-            <li>Vessels <span class="code">D1</span> and <span class="code">D2</span> have the same memory parents.</li>
-        </ul>
-        <p>Setting up a memory mirror requires permission to <span class="code">memControlProtab</span>. If agent <span class="code">E1</span> wants to create a memory mirror from vessel <span class="code">E2</span> to vessel <span class="code">E3</span>, agent <span class="code">E1</span> must hold permission to <span class="code">memControlProtab</span> on both vessel <span class="code">E2</span> and vessel <span class="code">E3</span>.</p>
         <p>An application may be configured so that the launcher automatically becomes a memory parent of the launched agent. This mechanism is useful when the application creator does not wish to be a memory parent of its application.</p>
+        <p>To preserve system resources, an agent may mark itself as collectable. The system may kill a collectable agent to free memory. A dependent agent may mark a collectable agent as a reference. The system will not kill any direct or indirect references of a non-collectable agent.</p>
         <p>The resource system of non-volatile storage is simpler than that of memory. Volume items cannot be garbage collected in the same way as memory allocations. As a result, throttling or killing agents is not a valid mechanism for freeing non-volatile storage.</p>
         <p>Instead, each volume item has a maximum volume quota. The total storage size of a file cannot exceed the volume quota of the file. In a similar fashion, the total storage size of all items in a directory cannot exceed the volume quota of the directory.</p>
         <p>The system performs the following actions to maintain the volume quota invariant:</p>
@@ -262,6 +232,21 @@ pre.code {
             <li>If an agent tries to decrease the volume quota of a volume item below its storage usage, the system throws an error.</li>
         </ul>
         <p>If an agent has write permission for a directory, the agent may set the volume quota of any item in the directory. Note that write permission for a volume item alone is insufficient to modify the volume quota of the volume item itself.</p>
+        <p class="title2">MIRROR SYSTEM</p>
+        <p>A "vessel mirror" is a mechanism which causes one vessel to adopt the permission and memory identity of another vessel. If vessel <span class="code">A1</span> is a mirror of vessel <span class="code">A2</span>, then the following properties hold true:</p>
+        <ul>
+            <li>Vessels <span class="code">A1</span> and <span class="code">A2</span> hold the same permissions.</li>
+            <li>If the permissions of vessel <span class="code">A1</span> change, then the permissions of vessel <span class="code">A2</span> change in the same way.</li>
+            <li>If the permissions of vessel <span class="code">A2</span> change, then the permissions of vessel <span class="code">A1</span> change in the same way.</li>
+            <li>Vessels <span class="code">A1</span> and <span class="code">A2</span> have the same memory quota, memory parents, and memory children.</li>
+            <li>If the memory configuration of vessel <span class="code">A1</span> changes, then the memory configuration of vessel <span class="code">A2</span> changes in the same way.</li>
+            <li>If the memory configuration of vessel <span class="code">A2</span> changes, then the memory configuration of vessel <span class="code">A1</span> changes in the same way.</li>
+            <li>Memory usage of both vessel <span class="code">A1</span> and <span class="code">A2</span> count toward the same memory quota.</li>
+        </ul>
+        <p>Setting up a vessel mirror requires permission to both <span class="code">permControlProtab</span> and <span class="code">memControlProtab</span>. If agent <span class="code">B1</span> wants to configure vessel <span class="code">B2</span> as a mirror of vessel <span class="code">B3</span>, agent <span class="code">B1</span> must hold <span class="code">permControlProtab</span> and <span class="code">memControlProtab</span> permissions on both vessel <span class="code">B2</span> and <span class="code">B3</span>.</p>
+        <p>A vessel mirror may be used to automatically persist the permissions and memory configuration of an agent during runtime. For example, if agent <span class="code">C1</span> is a vessel mirror of volume item <span class="code">C2</span>, and agent <span class="code">C1</span> receives permission <span class="code">C3</span>, then permission <span class="code">C3</span> will be persisted in volume item <span class="code">C2</span>. Even after agent <span class="code">C1</span> dies, volume item <span class="code">C2</span> will still hold permission <span class="code">C3</span>.</p>
+        <p>An agent launched from an application file is a vessel mirror of its application file. An agent launched from an application bundle is a vessel mirror of its application bundle. As a consequence, a launched agent holds the same permissions and memory configuration as its application file or bundle. This relationship may be broken if the vessel mirror is removed during runtime.</p>
+        <p>Every volume item holds implicit permission for all operations on itself. Because a launched agent is a vessel mirror of its application bundle or file, an agent holds full permissions on its application bundle or file upon launch.</p>
     </body>
 </html>
 
